Fixed some layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@
   background-image: url("./assets/destination/background-destination-desktop.jpg");
 }
 @media (max-width:520px) {
+  
   .home{
     background-image: url("./assets/home/background-home-mobile.jpg");
   }
@@ -50,6 +51,7 @@
 body{
   font-family: 'Barlow Condensed', sans-serif;
   font-family: 'Bellefair', serif;
+  font-size: 18px;
 }
 header{
   padding: 30px;
@@ -121,7 +123,10 @@ main .intro{
   justify-content: space-around;
   align-items: flex-end;
   margin-top: 40px;
+  width: 100%;
+
 }
+
 .intro div{
   width: 50%;
 }
@@ -137,8 +142,9 @@ main .intro{
 
 }
 .intro p {
-  font-size: 18px;
+  font-size: 20px;
   margin-top: 40px;
+  width: 80%;
 }
 .intro > span{
   background-color: white;
@@ -165,6 +171,12 @@ main .intro{
   transform: translateY(-16.5px);
 }
 @media (max-width: 992px){
+  header img{
+    padding-right: 0;
+  }
+  header hr{
+    width:220px;
+  }
   main .intro{
     flex-direction: column;
     justify-content: center;
@@ -172,16 +184,26 @@ main .intro{
     text-align: center;
   }
   main .intro span{
+    font-size: 90px;
     margin-top: 70px;
+  }
+  main .intro .explore{
+    font-size: 30px;
+  }
+  main .intro p {
+    width: 100%;
   }
   header ul{
     display:flex;
+    left: 0;
+  }
+  .intro > span{
+    width: 250px;
+    height: 250px;
   }
 }
 @media (max-width:580px) {
-  .intro h5 span{
-    font-size: 105px;
-  }  
+ 
     header ul{
       position:absolute;
       overflow: hidden;
@@ -200,6 +222,7 @@ main .intro{
     }
     img.small:first-of-type{
       display: block;
+      padding: 0;
       transition: all 0.4s;
     }
     img.small:last-of-type{
@@ -224,6 +247,11 @@ main .intro{
   justify-content:space-between;
   align-items: flex-start; */
   color:white;
+
+}
+.dest-info{
+
+  margin-top: 30px;
 }
 .destination h2{
   margin-bottom: 40px;
@@ -399,6 +427,10 @@ main .intro{
   .crew-section img {
     width:100%;
   }
+  .crew-section .crew-details {
+
+    width: 100%;
+  }
   .crew-details ul{
     justify-content: center;
     order: 0;
@@ -487,7 +519,11 @@ main .intro{
   }
   .tech-section .horizontal ul{
     flex-direction: row;
-}}
+  }
+  .tech-section .horizontal ul li{
+    height: 60px;
+  }
+}
 /* Animation and smooth loading */
 .transition-enter {
   opacity: 0.01;
